--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,16 @@
 [run]
 omit =
+    @abstract
     ./tests/*
     ./src/gateway/*
     */migrations/*
     settings.py
-    asgi.py
+    */asgi.py
+    */wsgi.py
+    autoatendimento/wsgi.py
     admin.py
     apps.py
     *Interface.py
+[report]
+exclude_lines =
+    @abstract
