--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=rafaelbgil_fiap-autoatendimento-app-catalogo
 sonar.organization=rafaelbgil
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.sources=src/
