--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=rafaelbgil_fiap-autoatendimento-app-catalogo
 sonar.organization=rafaelbgil
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.version=3.10
+sonar.exclusions=docker-auxiliar-files/*
