--- a/.coveragerc
+++ b/.coveragerc
@@ -14,6 +14,8 @@ omit =
     docker-auxiliar-files/*
     ./docker-auxiliar-files/*
     ./features/*
+    tests/*
+    features/*
 [report]
 exclude_lines =
     @abstractmethod
